--- a/output/work.html
+++ b/output/work.html
@@ -75,6 +75,21 @@
                 </div>
                 </div>
             </div>
+
+            
+                <div class="col">
+                <div class="employee-card">
+                <div class="card-header">
+                    <h2>Lauryn Hill${team.name}</h2>
+                    <h4>Manager ${team.position}</h4>
+                </div>
+                <div class="card-body">
+                    <h5>ID: 778445 ${team.id}</h5>
+                    <h5>Email: <a href="mailto: jada@ymail.com">lboy@gmail.com${team.email}</a></h5>
+                    <h5>Office: 2115e ${team.officeN}</h5>
+                </div>
+                </div> ${team.school}
+            </div> 
     -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
